# ImportExport_3DM

./: README.md  package.xml
freecad/importExport3DM/: __init__.py  export3DM.py
